# doc-toolkit

./: .env.azure_map.sample  .env.bing_search.sample  .env.postgre.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
common/: settings.py
evaluators/: rouge.py
extractors/: azure_form_recognizer.py
models/: azure_map.py  azure_map_routes.py  bing_search.py  cognitive_search.py
openai/: token_count.py
samples/: .env.sample  .env.sample.fr_pdf  README.md  azure_form_recognizer.py  summarization.py
services/: azure_blob_storage.py  azure_form_recognizer.py
services/ai/: azure_form_recognizer.py  azure_map_routes.py  azure_maps.py  azure_openai.py  bing_search.py  cognitive_search.py
services/storage/: azure_postgresql.py
tests/evaluators/: test_rouge.py
tests/extractors/: test_azure_form_recognizer.py
