[tool.poetry]
name = "doc-toolkit"
version = "0.1.0"
description = "document toolkit"
authors = ["Dennis Seah <dennis.seah@microsoft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob = "^12.19.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.2"
aiohttp = "^3.9.1"
azure-ai-formrecognizer = "^3.3.2"
tabulate = "^0.9.0"
tiktoken = "^0.5.2"
openai = "^1.3.8"
rouge-score = "^0.1.2"
psycopg2-binary = "^2.9.9"
azure-cognitiveservices-search-websearch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.339"
pre-commit = "^3.5.0"
black = "^23.11.0"
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
markers = [
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
omit = [
    "**/__init__.py",
    "samples/**",
    "models/**",
    "services/**",
    "tests/*",
]
